--- a/局域网助手/ScanLan/ScanLan.csproj
+++ b/局域网助手/ScanLan/ScanLan.csproj
@@ -54,9 +54,7 @@
   <PropertyGroup>
     <ApplicationIcon>app.ico</ApplicationIcon>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="Buffalo.ArgCommon">
       <HintPath>..\dll\Buffalo.ArgCommon.dll</HintPath>
@@ -79,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigSetting.cs" />
+    <Compile Include="FormIconUnit.cs" />
     <Compile Include="FrmInputBox.cs">
       <SubType>Form</SubType>
     </Compile>
