--- a/PixivToVideo/SourceCode/PixivToVideo/PixivToVideo.csproj
+++ b/PixivToVideo/SourceCode/PixivToVideo/PixivToVideo.csproj
@@ -71,6 +71,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToolVersionInfo.cs" />
     <Compile Include="ZipUnit\SharpUnZipFile.cs" />
     <Compile Include="ZipUnit\SharpZipFile.cs" />
     <EmbeddedResource Include="FrmMain.resx">
