--- a/URL呼出程序窗口/URLToForms/URLToForms/URLToForms.csproj
+++ b/URL呼出程序窗口/URLToForms/URLToForms/URLToForms.csproj
@@ -9,12 +9,13 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>URLToForms</RootNamespace>
     <AssemblyName>URLToForms</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>2.0</OldToolsVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -24,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,6 +34,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -61,8 +67,13 @@
     <Compile Include="FrmQuery.Designer.cs">
       <DependentUpon>FrmQuery.cs</DependentUpon>
     </Compile>
+    <Compile Include="Win32\ProcessUrlRegistry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Win32\Enums.cs" />
+    <Compile Include="Win32\SingleForms.cs" />
+    <Compile Include="Win32\Structs.cs" />
+    <Compile Include="Win32\WindowsAPI.cs" />
     <EmbeddedResource Include="FrmEdit.resx">
       <SubType>Designer</SubType>
       <DependentUpon>FrmEdit.cs</DependentUpon>
@@ -85,6 +96,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Win32\SingleForms.resx">
+      <DependentUpon>SingleForms.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="app.config" />
+    <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -94,16 +110,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Buffalo.Kernel\Buffalo.Kernel.csproj">
-      <Project>{6EC04216-A422-4751-AA81-1211DCB10BAB}</Project>
-      <Name>Buffalo.Kernel</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Buffalo.Win32Kernel\Buffalo.Win32Kernel.csproj">
-      <Project>{48492BAD-6312-4A80-A660-C0DA04957227}</Project>
-      <Name>Buffalo.Win32Kernel</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
